--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,15 +1,12 @@
 // Main Navbar Styling 
 .logo{
-    margin-top: 25px;
     display: inline-block;
-    flex: 8 !important;
-
+    flex: 8 !important;    
+    transition: all 1s;
     a {
-        color: #fff;
-        font-size: 30px;
-        text-decoration: none;
-        font-family: Gibson;
-        text-shadow: 5px 1px 11px rgba(0, 0, 0, 0.22);
+        position: fixed;
+        top: 30px;
+        z-index: 5;
         img{
             width: 122px;
         }
@@ -17,9 +14,8 @@
 }
 
 .main-navbar {
-    position: fixed;
-    z-index: 1005;
     width: 100%;
+    z-index: 2;
 
     .nav-container{
         max-width: 100%;
@@ -36,11 +32,12 @@
 .search-area{
     display: flex;
     justify-content: flex-end;
+    z-index: 5;
 }
 
 .search-button{
     position: fixed;
-    top: 31px;
+    top: 30px;
 
     i{
         font-size: 32px;
